Create general page structure

--- a/index.html
+++ b/index.html
@@ -13,6 +13,24 @@
     <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-16x16.png">
 </head>
 <body>
-    
+
+    <!-- Start Header -->
+    <header>
+        <p>Header</p>
+    </header>
+    <!-- End Header -->
+
+    <!-- Start Main Area -->
+    <main>
+        <p>Main Content</p>
+    </main>
+    <!-- End Main Area -->
+        
+    <!-- Start Footer -->
+    <footer>
+        <p>Footer</p>
+    </footer>
+    <!-- End Footer -->
+
 </body>
 </html>
