--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
 
     <!-- Start Header -->
     <header>
-        <p>Header</p>
+        <a href="index.html">
+            <h1 id="logo">Love Running</h1>
+        </a>
     </header>
     <!-- End Header -->
 
