--- a/index.html
+++ b/index.html
@@ -40,9 +40,16 @@
         
     <!-- Start Footer -->
     <footer>
-        <p>Footer</p>
+        <ul>
+            <li><a href="https://www.facebook.com/" target="_blank" rel="noopener" aria-label="Visit our Facebook page (opens in a new tab)"><i class="fa-brands fa-facebook"></i></a></li>
+            <li></li>
+            <li></li>
+            <li></li>
+        </ul>
     </footer>
     <!-- End Footer -->
 
+    <!-- Import Fontawesome Icon Kit -->
+    <script src="https://kit.fontawesome.com/b267705d2e.js" crossorigin="anonymous"></script>
 </body>
 </html>
