Add hero section and image

--- a/index.html
+++ b/index.html
@@ -34,7 +34,9 @@
 
     <!-- Start Main Area -->
     <main>
-        <p>Main Content</p>
+        <section id="hero">
+            
+        </section>
     </main>
     <!-- End Main Area -->
         
