--- a/index.html
+++ b/index.html
@@ -35,7 +35,10 @@
     <!-- Start Main Area -->
     <main>
         <section id="hero">
-            
+            <div id="cover-text">
+                <h2>Love Running</h2>
+                <h3>Dublin Dockland & Phoenix Park</h3>
+            </div>
         </section>
     </main>
     <!-- End Main Area -->
