Add reasons image and center it

--- a/index.html
+++ b/index.html
@@ -85,6 +85,14 @@
                     </div>
                 </div>
 
+                <!-- Benefits image -->
+
+                <div id="benefits-image">
+                    <div id="circle-cover-bg">
+                        
+                    </div>
+                </div>
+
             </div>
 
         </section>
