Add atheles image to gallery.html

--- a/gallery.html
+++ b/gallery.html
@@ -34,7 +34,11 @@
 
     <!-- Start Main Area -->
     <main>
-        <p>Main Content</p>
+        <section id="gallery">
+            <div id="photos">
+                <img src="assets/images/athletes.webp" alt="Two athletes running together">
+            </div>
+        </section>
     </main>
     <!-- End Main Area -->
         
