--- a/signup.html
+++ b/signup.html
@@ -34,7 +34,55 @@
 
     <!-- Start Main Area -->
     <main>
-        <p>Main Content</p>
+
+        <!-- Signup Section Start -->
+
+        <section id="signup">
+
+            <!-- Form Start -->
+
+            <form action="https://formdump.codeinstitute.net" id="signup-form">
+
+                <!-- Heading -->
+
+                <h2><i class="fa-solid fa-heart-pulse"></i> LET'S GET YOU SIGNED UP!</h2>
+
+                <!-- Input fields -->
+
+                <label for="first-name">First Name</label>
+                <input type="text" name="first-name" id="first-name" class="text-input" required>
+                <br>
+                <label for="last-name">Last Name</label>
+                <input type="text" name="last-name" id="last-name" class="text-input" required>
+                <br>
+                <label for="email-address">Email Address</label>
+                <input type="email" name="email-address" id="email-address" class="text-input" required>
+                <br>
+
+                <!-- Radio buttons -->
+
+                <label for="road">Road</label>
+                <input type="radio" id="road" name="running_preference" required>
+                <br>
+                <label for="trail">Trail</label>
+                <input type="radio" id="trail" name="running_preference" required>
+                <br>
+                <label for="both">Both</label>
+                <input type="radio" id="both" name="running_preference" required>
+                <br>
+
+                <!-- Submit button -->
+
+                <input type="submit" value="Let's Run!" class="join-button">
+
+            </form>
+
+            <!-- Form End -->
+
+        </section>
+
+        <!-- Signup Section Start -->
+         
     </main>
     <!-- End Main Area -->
         
