Add form and correct mistakes

--- a/signup.html
+++ b/signup.html
@@ -62,13 +62,13 @@
                 <!-- Radio buttons -->
 
                 <label for="road">Road</label>
-                <input type="radio" id="road" name="running_preference" required>
+                <input type="radio" id="road" value="road" name="running_preference" required>
                 <br>
                 <label for="trail">Trail</label>
-                <input type="radio" id="trail" name="running_preference" required>
+                <input type="radio" id="trail" value="trail" name="running_preference" required>
                 <br>
                 <label for="both">Both</label>
-                <input type="radio" id="both" name="running_preference" required>
+                <input type="radio" id="both" value="both" name="running_preference" required>
                 <br>
 
                 <!-- Submit button -->
@@ -82,7 +82,7 @@
         </section>
 
         <!-- Signup Section Start -->
-         
+
     </main>
     <!-- End Main Area -->
         
