--- a/signup.html
+++ b/signup.html
@@ -60,15 +60,16 @@
                 <br>
 
                 <!-- Radio buttons -->
-
-                <label for="road">Road</label>
-                <input type="radio" id="road" value="road" name="running_preference" required>
-                <br>
-                <label for="trail">Trail</label>
-                <input type="radio" id="trail" value="trail" name="running_preference" required>
-                <br>
-                <label for="both">Both</label>
-                <input type="radio" id="both" value="both" name="running_preference" required>
+                <div class="radio-buttons">
+                    <label for="road">Road</label>
+                    <input type="radio" id="road" value="road" name="running_preference" required>
+                    <br>
+                    <label for="trail">Trail</label>
+                    <input type="radio" id="trail" value="trail" name="running_preference" required>
+                    <br>
+                    <label for="both">Both</label>
+                    <input type="radio" id="both" value="both" name="running_preference" required>
+                </div>
                 <br>
 
                 <!-- Submit button -->
